crates/specforge-cli/tests/snapshots/tests__parity__migrate_failing__cli.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: cli_snap
---
{
  "check": {
    "diagnostics": [
      "Error E019"
    ],
    "ok": false
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/bad.spec": "// specforge-format: 99.0\nbehavior bad_one \"Bad\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n"
  },
  "ok": false,
  "payload": {
    "backups": [],
    "failed_count": 1,
    "files_written": [],
    "migrated_count": 0,
    "results": [
      {
        "error": "E019: unsupported format version 99.0 (max supported: 1.0) — Use a format version between 1.0 and 1.0.",
        "file_path": "[ROOT]/spec/bad.spec",
        "from_version": {
          "major": 99,
          "minor": 0
        },
        "status": "failed"
      },
      {
        "file_path": "[ROOT]/spec/main.spec",
        "from_version": {
          "major": 1,
          "minor": 0
        },
        "status": "skipped",
        "to_version": {
          "major": 1,
          "minor": 0
        }
      }
    ],
    "skipped_count": 1,
    "target_version": {
      "major": 1,
      "minor": 0
    }
  }
}
