crates/specforge-cli/tests/snapshots/tests__parity__migrate_failing__mcp.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: mcp_snap
---
{
  "check": {
    "diagnostics": [
      "Error E019"
    ],
    "ok": false
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/bad.spec": "// specforge-format: 99.0\nbehavior bad_one \"Bad\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n"
  },
  "ok": false,
  "payload": {
    "code": "internal_error",
    "data": {
      "diffs": [],
      "dry_run": false,
      "files_failed": 1,
      "files_migrated": 0,
      "files_skipped": 1,
      "files_written": [],
      "from_version": "1.0",
      "hook_failures": [],
      "hooks_invoked": [],
      "migrated": false,
      "ok": false,
      "post_migration_errors": [],
      "post_migration_validated": false,
      "results": [
        {
          "error": "E019: unsupported format version 99.0 (max supported: 1.0) — Use a format version between 1.0 and 1.0.",
          "file_path": "[ROOT]/spec/bad.spec",
          "from_version": {
            "major": 99,
            "minor": 0
          },
          "status": "failed"
        },
        {
          "file_path": "[ROOT]/spec/main.spec",
          "from_version": {
            "major": 1,
            "minor": 0
          },
          "status": "skipped",
          "to_version": {
            "major": 1,
            "minor": 0
          }
        }
      ],
      "rollback": null,
      "rolled_back": false,
      "schema_warnings": [],
      "structural_differences": [],
      "to_version": "1.0"
    },
    "message": "the migration failed",
    "tool": "specforge.migrate"
  }
}
